src/make.log
In file included from core/policy/CachePolicy.cpp:2:0:
./core/BlockOp.h: In member function ‘virtual void hdcs::core::UpdateTierMeta::send()’:
./core/BlockOp.h:298:52: error: invalid conversion from ‘hdcs::store::BLOCK_STATUS_TYPE* {aka unsigned int*}’ to ‘hdcs::store::BLOCK_STATUS_TYPE {aka unsigned int}’ [-fpermissive]
     data_store->block_meta_update(block->block_id, status);  
                                                    ^
In file included from ./core/BlockOp.h:12:0,
                 from core/policy/CachePolicy.cpp:2:
./store/DataStore.h:26:17: note:   initializing argument 2 of ‘virtual int hdcs::store::DataStore::block_meta_update(uint64_t, hdcs::store::BLOCK_STATUS_TYPE)’
     virtual int block_meta_update(uint64_t block_id, BLOCK_STATUS_TYPE status) = 0;
                 ^
core/policy/CachePolicy.cpp: In member function ‘virtual hdcs::core::BlockOp* hdcs::core::CachePolicy::map(hdcs::core::BlockRequest&&, hdcs::core::BlockOp**)’:
core/policy/CachePolicy.cpp:132:73: warning: ignoring return value of ‘int posix_memalign(void**, size_t, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
           posix_memalign((void**)&block_buffer, 4096, block->block_size);
                                                                         ^
core/policy/CachePolicy.cpp:157:75: warning: ignoring return value of ‘int posix_memalign(void**, size_t, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
             posix_memalign((void**)&block_buffer, 4096, block->block_size);
                                                                           ^
core/policy/CachePolicy.cpp:207:75: warning: ignoring return value of ‘int posix_memalign(void**, size_t, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
             posix_memalign((void**)&block_buffer, 4096, block->block_size);
                                                                           ^
core/policy/CachePolicy.cpp:242:77: warning: ignoring return value of ‘int posix_memalign(void**, size_t, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
               posix_memalign((void**)&block_buffer, 4096, block->block_size);
                                                                             ^
core/policy/CachePolicy.cpp: In lambda function:
core/policy/CachePolicy.cpp:110:67: warning: ignoring return value of ‘int posix_memalign(void**, size_t, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
       posix_memalign((void**)&data, 4096, sizeof(char)*block_size);
                                                                   ^
core/policy/CachePolicy.cpp: In member function ‘void hdcs::core::CachePolicy::process()’:
core/policy/CachePolicy.cpp:375:74: warning: ignoring return value of ‘int posix_memalign(void**, size_t, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
       posix_memalign((void**)&data, 4096, sizeof(char)*block->block_size);
                                                                          ^
core/policy/CachePolicy.cpp: In member function ‘virtual void hdcs::core::CachePolicy::flush_all()’:
core/policy/CachePolicy.cpp:418:72: warning: ignoring return value of ‘int posix_memalign(void**, size_t, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
     posix_memalign((void**)&data, 4096, sizeof(char)*block->block_size);
                                                                        ^
make: *** [core/policy/CachePolicy.o] Error 1
